--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,93 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/activity_main"
+        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-        tools:context="cn.pencilsky.telnet.MainActivity">
+        android:padding="5dp"
+        tools:context="cn.pencilsky.telnet.MainActivity" android:background="@color/colorPrimaryDark">
 
-    <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Hello World!"/>
+    <ScrollView
+            android:id="@+id/scrollView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@drawable/bg_display_area"
+            android:layout_marginBottom="300dp">
+        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
+                      android:orientation="vertical">
+            <TextView
+                    android:id="@+id/displayArea"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@android:color/background_light"
+                    android:padding="5dp"/>
+        </LinearLayout>
+    </ScrollView>
+    <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="300dp" android:layout_alignParentBottom="true">
+
+        <EditText
+                android:id="@+id/command"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:inputType="textPersonName"
+                android:ems="10"
+                android:textSize="14sp" android:textColor="@android:color/white"
+                android:layout_marginTop="5dp" android:layout_marginEnd="100dp"
+                android:background="@drawable/bg_edit" android:paddingStart="10dp" android:hint="command"/>
+        <Button
+                android:id="@+id/send"
+                android:text="发送"
+                android:layout_width="wrap_content"
+                android:textSize="14sp"
+                android:layout_alignParentRight="true" android:layout_height="50dp"/>
+        <RelativeLayout
+                android:layout_width="200dp"
+                android:layout_height="200dp"
+                android:layout_below="@id/command"
+                android:layout_marginTop="30dp"
+                android:layout_centerHorizontal="true"
+                android:background="@drawable/bc_controller"
+        >
+            <ImageView
+                    android:id="@+id/enter"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    app:srcCompat="@drawable/ic_enter"
+                    android:layout_centerInParent="true" android:padding="5dp"/>
+
+            <ImageView
+                    android:id="@+id/down"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:layout_below="@+id/enter"
+                    android:layout_centerHorizontal="true"
+                    app:srcCompat="@drawable/ic_arrow_down" android:layout_margin="10dp"/>
+
+            <ImageView
+                    android:id="@+id/up"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+
+                    android:layout_centerHorizontal="true"
+                    app:srcCompat="@drawable/ic_arrow_up" android:layout_above="@+id/enter"
+                    android:layout_margin="10dp"/>
+
+            <ImageView
+                    android:id="@+id/left"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    app:srcCompat="@drawable/ic_arrow_left" android:layout_toLeftOf="@+id/enter"
+                    android:layout_centerVertical="true" android:layout_margin="10dp"/>
+
+            <ImageView
+                    android:id="@+id/right"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    app:srcCompat="@drawable/ic_arrow_right" android:layout_centerVertical="true"
+                    android:layout_toRightOf="@+id/enter" android:layout_margin="10dp"/>
+        </RelativeLayout>
+
+    </RelativeLayout>
 </RelativeLayout>
